CHANGES IN VERSION 1.24.2
-------------------------

BUG FIXES

    o fix `seqSummary()` when no phase data


CHANGES IN VERSION 1.24.1
-------------------------

NEW FEATURES

    o add the compiler information in `seqSystem()`

    o new arguments '.balancing', '.bl_size' and '.bl_progress' in `seqParallel()`
      for load balancing


CHANGES IN VERSION 1.24.0
-------------------------

NEW FEATURES

    o a new function `seqResetVariantID()`

    o a new option in `seqRecompress(, compress="none")` to uncompress all data

    o `seqGetData()` allows a GDS file name in the first argument


CHANGES IN VERSION 1.22.4-1.22.6
-------------------------

BUG FIXES

    o `seqSetFilter(, sample.id=)` fails to correctly select samples in rare cases
      (since SeqArray>=v1.22.0 uses the distribution of selected samples to optimize
      the data access of genotypes, see https://github.com/zhengxwen/SeqArray/issues/48)

    o the bgzf VCF file is truncated in `seqGDS2VCF()` since the file is not
      closed appropriately

    o invalid chromosomes and position in the output of `seqMerge()` when merging
      different samples but same variants


CHANGES IN VERSION 1.22.1-1.22.3
-------------------------

UTILITIES

    o more information in `seqDelete()`

NEW FEATURES

    o a new option 'scenario' in `seqVCF2GDS()` and `seqBCF2GDS()`

BUG FIXES

    o export a haploid VCF file using `seqGDS2VCF()`

    o export VCF without any FORMAT data in `seqGDS2VCF()`

    o export GDS without genotypes in `seqExport()`

    o fix parallel file writing in seqVCF2GDS(), when no genotype


CHANGES IN VERSION 1.22.0
-------------------------

UTILITIES

    o avoid duplicated meta-information lines in `seqVCF2GDS()` and
      `seqVCF_Header()`

    o require >= R_v3.5.0, since reading from connections in text mode is
      buffered

    o `seqDigest()` requires the digest package

    o optimization in reading genotypes from a subset of samples (according to
      gdsfmt_1.17.5)
