@@ -449,7 +449,8 @@
                         ans <- .combinefun(ans, dv)
                 } else if (.combinefun %in% c("unlist", "list"))
                 {
-                    ans[[d$tag]] <- dv
+                    # assignment NULL would remove it from the list
+                    if (!is.null(dv)) ans[[d$tag]] <- dv
                 }
 
                 if (!is.null(.updatefun)) .updatefun(i)
@@ -459,9 +460,7 @@
             }
         }
     } else {
-
         ####  serial implementation
-
         if (is.function(.combinefun))
         {
             ans <- NULL
@@ -481,10 +480,101 @@
         {
             ans <- vector("list", .num)
             for (i in seq_len(.num))
-                ans[[i]] <- .fun(i, ...)
+            {
+                v <- .fun(i, ...)
+                # assignment NULL would remove it from the list
+                if (!is.null(v)) ans[[i]] <- v
+            }
         }
     }
 
+    ans
+}
+
+
+.DynamicForkCall <- function(ncore, .num, .fun, .combinefun, .updatefun, ...)
+{
+    # in order to use the internal functions accessed by ':::'
+    # the functions are all defined in 'parallel/R/unix/mclapply.R'
+
+    # check
+    stopifnot(is.numeric(ncore), length(ncore)==1L)
+    stopifnot(is.numeric(.num), length(.num)==1L)
+    stopifnot(is.function(.fun))
+    stopifnot(is.character(.combinefun) | is.function(.combinefun))
+    stopifnot(is.null(.updatefun) | is.function(.updatefun))
+
+    # all processes created from now on will be terminated by cleanup
+    parallel:::mc.reset.stream()
+    parallel:::prepareCleanup()
+    on.exit(parallel:::cleanup(TRUE))
+
+    # initialize
+    if (identical(.combinefun, "unlist") | identical(.combinefun, "list"))
+        ans <- vector("list", .num)
+    else
+        ans <- NULL
+
+    jobs <- lapply(seq_len(min(.num, ncore)), function(i)
+        parallel::mcparallel(.fun(i, ...), name=NULL, mc.set.seed=TRUE, silent=FALSE))
+    jobsp <- parallel:::processID(jobs)
+    jobid <- seq_along(jobsp)
+    has.errors <- 0L
+
+    finish <- rep(FALSE, .num)
+    nexti <- length(jobid) + 1L
+    while (!all(finish))
+        s <- parallel:::selectChildren(jobs[!is.na(jobsp)], -1)
+        if (is.null(s)) break  # no children, should not happen
+        if (is.integer(s))
+        {
+            for (ch in s)
+            {
+                ji <- match(TRUE, jobsp==ch)
+                ci <- jobid[ji]
+                r <- parallel:::readChild(ch)
+                if (is.raw(r))
+                {
+                    child.res <- unserialize(r)
+                    if (inherits(child.res, "try-error"))
+                        has.errors <- has.errors + 1L
+                    if (is.function(.combinefun))
+                    {
+                        if (inherits(child.res, "try-error"))
+                            stop(child.res)
+                        if (is.null(ans))
+                            ans <- child.res
+                        else
+                            ans <- .combinefun(ans, child.res)
+                    } else if (.combinefun %in% c("unlist", "list"))
+                    {
+                        # assignment NULL would remove it from the list
+                        if (!is.null(child.res)) ans[[ci]] <- child.res
+                    }
+                    if (!is.null(.updatefun)) .updatefun(ci)
+                } else {
+                    # the job has finished
+                    finish[ci] <- TRUE
+                    jobsp[ji] <- jobid[ji] <- NA_integer_
+                    # still something to do
+                    if (nexti <= .num)
+                    {
+                        jobid[ji] <- nexti
+                        jobs[[ji]] <- parallel::mcparallel(.fun(nexti, ...),
+                            name=NULL, mc.set.seed=TRUE, silent=FALSE)
+                        jobsp[ji] <- parallel:::processID(jobs[[ji]])
+                        nexti <- nexti + 1L
+                    }
+                }
+            }
+        }
+    }
+
+    if (has.errors)
+    {
+        warning(sprintf("%d function calls resulted in an error", has.errors),
+            immediate.=TRUE, domain=NA)
+    }
     ans
 }
 
